k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-quarkus
  labels:
    app: my-java-quarkus
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-java-quarkus
  template:
    metadata:
      labels:
        app: my-java-quarkus
    spec:
      containers:
        - name: my-java-quarkus
          image: image-registry.openshift-image-registry.svc:5000/development/hello-quarkus:1673919972
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "150m"
